--- a/figma.css
+++ b/figma.css
@@ -49,7 +49,7 @@ body {
 }
 
 header {
-    background-image: url(./bg.jpg);
+    background-image: url(./BG\ \(6\).jpg);
     background-position: center;
     background-size: cover;
     width: 100vw;
